# vex

./: .codecov.yml  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMIT_MSG.txt  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION.md  LICENSE  Makefile  PR_DESCRIPTION.md  README.md  README.zh-CN.md  RELEASING.md  SECURITY.md  SUPPORT.md  TESTING.md  UI_IMPLEMENTATION.md  action.yml  deny.toml  dist-workspace.toml  verify-ui.sh  verify.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release-postflight.yml  release.yml  (+1 more)
benches/: benchmarks.rs
docs/: BEFORE_AFTER.md  IMPROVEMENTS.md  README.md  TRANSLATION_SUMMARY.md  TROUBLESHOOTING.md  custom.css  header.html  logging.md  test-coverage.md
homebrew/: README.md  vex.rb.template
scripts/: check-docs.sh  check-release-tooling.sh  install-ci-release.sh  install-release.sh  preview-docs.sh  render-homebrew-formula.sh  setup-action-tools.sh  test-features.sh  test-interactive.sh  test-management-features.sh  test-performance.sh  test-rust-extensions-live.sh  test-security.sh  test-shell-hooks.sh  test_vex_local_build_strict.py  test_vex_macos_upstream.py  test_vex_release_strict.py
src/: activation.rs  advisories.rs  alias.rs  app.rs  archive_cache.rs  cache.rs  checksum.rs  cli.rs  config.rs  downloader.rs  env.rs  error.rs  fs_utils.rs  home_state.rs  http.rs  installer.rs  lock.rs  lockfile.rs  logging.rs  main.rs  main_tests.rs  output.rs  paths.rs  project.rs  requested_versions.rs  resolver.rs  shell.rs  spec.rs  switcher.rs  team_config.rs  templates.rs  tool_metadata.rs  ui.rs  updater.rs  version_files.rs  version_state.rs  versioning.rs
tests/: cli_test.rs  e2e_test.rs
(+230 files in other folders)
