[package]
name = "vex"
version = "0.1.6"
edition = "2021"
license = "MIT"
authors = ["Noah Qin"]
description = "A fast, multi-language version manager for macOS"
repository = "https://github.com/imnotnoahhh/vex"

[dependencies]
# CLI 框架
clap = { version = "4", features = ["derive"] }

# HTTP 客户端
reqwest = { version = "0.13", features = ["blocking", "json"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# 压缩和解压
tar = "0.4"
flate2 = "1"

# 进度条
indicatif = "0.18"

# 加密
sha2 = "0.10"

# 文件系统
dirs = "6"

# 系统信息（磁盘空间检查）
sysinfo = "0.33"

# 错误处理
thiserror = "2"

# 交互式选择
dialoguer = "0.12"

# 文件锁
fs2 = "0.4"

# 终端颜色
owo-colors = "4"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--html-in-header", "docs/header.html"]
